public interface Customer {
    void pay(double amount);
}
